Fixed uneven width of the check-in/cancell buttons on mobile

--- a/client/scss/partials/_reservation-dashboard.scss
+++ b/client/scss/partials/_reservation-dashboard.scss
@@ -1,8 +1,3 @@
-@media screen and (max-width: 770px) {
-  #reservation-container {
-    margin-top: 20px;
-  }
-}
 
 #reservation-container {
   table.reservation-dashboard {
@@ -17,6 +12,12 @@
   }
 }
 
+@media screen and (max-width: 770px) {
+  #reservation-container {
+    margin-top: 20px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   #responsive-scroll {
     overflow: scroll;
@@ -28,3 +29,11 @@
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  #rezo-button-width {
+    width: 100%;
+  }
+}
+
+
